labs/lab06/lab6/y.output
Grammar

    0 $accept: rima $end

    1 rima: sunet loc

    2 sunet: DING DONG

    3 loc: DEL


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    DING (258) 2
    DONG (259) 2
    DEL (260) 3


Nonterminals, with rules where they appear

    $accept (6)
        on left: 0
    rima (7)
        on left: 1
        on right: 0
    sunet (8)
        on left: 2
        on right: 1
    loc (9)
        on left: 3
        on right: 1


State 0

    0 $accept: • rima $end

    DING  shift, and go to state 1

    rima   go to state 2
    sunet  go to state 3


State 1

    2 sunet: DING • DONG

    DONG  shift, and go to state 4


State 2

    0 $accept: rima • $end

    $end  shift, and go to state 5


State 3

    1 rima: sunet • loc

    DEL  shift, and go to state 6

    loc  go to state 7


State 4

    2 sunet: DING DONG •

    $default  reduce using rule 2 (sunet)


State 5

    0 $accept: rima $end •

    $default  accept


State 6

    3 loc: DEL •

    $default  reduce using rule 3 (loc)


State 7

    1 rima: sunet loc •

    $default  reduce using rule 1 (rima)
